--- a/app/templates/categories.hbs
+++ b/app/templates/categories.hbs
@@ -17,7 +17,7 @@
   <div class='sort' data-test-categories-sort>
     <span class='small'>Sort by</span>
     <RlDropdownContainer @class="dropdown-container">
-      <RlDropdownToggle @tagName="a" @class="dropdown" data-test-current-order={{true}}>
+      <RlDropdownToggle @tagName="a" @class="dropdown" data-test-current-order>
         {{svg-jar "sort"}}
         {{ currentSortBy }}
         <span class='arrow'></span>
