--- a/app/templates/components/api-token-row.hbs
+++ b/app/templates/components/api-token-row.hbs
@@ -7,7 +7,7 @@
         @value={{api_token.name}}
         @autofocus="autofocus"
         @enter="saveToken"
-        data-test-focused-input={{true}}
+        data-test-focused-input
       />
     {{else}}
       {{ api_token.name }}
