--- a/app/templates/search.hbs
+++ b/app/templates/search.hbs
@@ -30,7 +30,7 @@
       <span class='small'>Sort by </span>
 
       <RlDropdownContainer @class="dropdown-container">
-        <RlDropdownToggle @tagName="a" @class="dropdown" data-test-current-order={{true}}>
+        <RlDropdownToggle @tagName="a" @class="dropdown" data-test-current-order>
           {{svg-jar "sort"}}
           {{ currentSortBy }}
           <span class='arrow'></span>
