--- a/app/templates/keyword/index.hbs
+++ b/app/templates/keyword/index.hbs
@@ -18,7 +18,7 @@
   <div class='sort' data-test-keyword-sort>
     <span class='small'>Sort by</span>
     <RlDropdownContainer @class="dropdown-container">
-      <RlDropdownToggle @tagName="a" @class="dropdown" data-test-current-order={{true}}>
+      <RlDropdownToggle @tagName="a" @class="dropdown" data-test-current-order>
         {{svg-jar "sort"}}
         {{ currentSortBy }}
         <span class='arrow'></span>
