Add `type=button` to regular button elements
The default `type` is `submit`, which is most often not what we want. We should be explicit and set `type=button` instead to disable the implicit submit behavior.

--- a/app/templates/components/api-token-row.hbs
+++ b/app/templates/components/api-token-row.hbs
@@ -39,16 +39,22 @@
 
   <div class='actions'>
     {{#if api_token.isNew}}
-      <button class='small yellow-button'
-          disabled={{disableCreate}}
-          title={{if emptyName "You must specify a name" ""}}
-          {{action "saveToken"}}>
+      <button
+        type="button"
+        class='small yellow-button'
+        disabled={{disableCreate}}
+        title={{if emptyName "You must specify a name" ""}}
+        {{action "saveToken"}}
+      >
         Create
       </button>
     {{else}}
-      <button class='small tan-button'
-          disabled={{api_token.isSaving}}
-          {{action "revokeToken"}}>
+      <button
+        type="button"
+        class='small tan-button'
+        disabled={{api_token.isSaving}}
+        {{action "revokeToken"}}
+      >
         Revoke
       </button>
     {{/if}}
