--- a/app/templates/crate/owners.hbs
+++ b/app/templates/crate/owners.hbs
@@ -64,7 +64,7 @@
         {{/if}}
       </div>
       <div class='stats downloads'>
-        <button class='remove-owner small yellow-button' {{action 'removeOwner' user}}>Remove</button>
+        <button type="button" class='remove-owner small yellow-button' {{action 'removeOwner' user}}>Remove</button>
       </div>
     </div>
   {{/each}}
