--- a/app/templates/dashboard.hbs
+++ b/app/templates/dashboard.hbs
@@ -74,7 +74,7 @@
         </span>
       {{else}}
         {{#if hasMore}}
-          <button class='load-more' {{ action 'loadMore' }}>
+          <button type="button" class='load-more' {{ action 'loadMore' }}>
             Load More
           </button>
         {{/if}}
