--- a/app/templates/me/index.hbs
+++ b/app/templates/me/index.hbs
@@ -72,7 +72,7 @@
   <div class='me-subheading'>
     <h2>API Access</h2>
     <div class='right'>
-      <button class='yellow-button' disabled={{disableCreate}} {{action "startNewToken"}}>New Token</button>
+      <button type="button" class='yellow-button' disabled={{disableCreate}} {{action "startNewToken"}}>New Token</button>
     </div>
   </div>
 
