--- a/app/templates/catch-all.hbs
+++ b/app/templates/catch-all.hbs
@@ -7,7 +7,7 @@
     @type="text"
     class="search"
     placeholder="Search"
-    @value={{search}}
+    @value={{this.search}}
     @enter={{action "search"}}
     required={{true}}
   />
