--- a/app/templates/category-slugs.hbs
+++ b/app/templates/category-slugs.hbs
@@ -8,7 +8,7 @@
 
   <div class='white-rows'>
     <dl>
-      {{#each model as |category|}}
+      {{#each this.model as |category|}}
         <dt data-test-category-slug={{category.slug}}>{{category.slug}}</dt>
         <dd data-test-category-description={{category.slug}}>{{category.description}}</dd>
       {{/each}}
