--- a/app/templates/components/badge-circle-ci.hbs
+++ b/app/templates/components/badge-circle-ci.hbs
@@ -1,6 +1,6 @@
-<a href="https://circleci.com/gh/{{ repository }}">
+<a href="https://circleci.com/gh/{{ this.repository }}">
   <img
-      src="https://circleci.com/gh/{{ repository }}/tree/{{ branch }}.svg?style=shield"
-      alt="{{ text }}"
-      title="{{ text }}">
+      src="https://circleci.com/gh/{{ this.repository }}/tree/{{ this.branch }}.svg?style=shield"
+      alt="{{ this.text }}"
+      title="{{ this.text }}">
 </a>
