--- a/app/templates/components/badge-cirrus-ci.hbs
+++ b/app/templates/components/badge-cirrus-ci.hbs
@@ -1,6 +1,6 @@
-<a href="https://cirrus-ci.com/github/{{ repository }}">
+<a href="https://cirrus-ci.com/github/{{ this.repository }}">
   <img
-      src="https://api.cirrus-ci.com/github/{{ repository }}.svg?branch={{ branch }}"
-      alt="{{ text }}"
-      title="{{ text }}">
+      src="https://api.cirrus-ci.com/github/{{ this.repository }}.svg?branch={{ this.branch }}"
+      alt="{{ this.text }}"
+      title="{{ this.text }}">
 </a>
