--- a/app/templates/components/badge-is-it-maintained-open-issues.hbs
+++ b/app/templates/components/badge-is-it-maintained-open-issues.hbs
@@ -1,6 +1,6 @@
-<a href="https://isitmaintained.com/project/{{ repository }}">
+<a href="https://isitmaintained.com/project/{{ this.repository }}">
   <img
-      src="https://isitmaintained.com/badge/open/{{ repository }}.svg"
-      alt="{{ text }}"
-      title="{{ text }}">
+      src="https://isitmaintained.com/badge/open/{{ this.repository }}.svg"
+      alt="{{ this.text }}"
+      title="{{ this.text }}">
 </a>
