--- a/app/templates/crate/docs.hbs
+++ b/app/templates/crate/docs.hbs
@@ -1,8 +1,8 @@
 <div id="crates-heading">
   {{svg-jar "circle-with-i"}}
-  <h1>Documentation for <em>{{model.name}}</em></h1>
+  <h1>Documentation for <em>{{this.model.name}}</em></h1>
 </div>
 
 <p>
-  Redirecting you to <code>{{model.documentation}}</code>&#8230;
+  Redirecting you to <code>{{this.model.documentation}}</code>&#8230;
 </p>
