--- a/app/templates/crate/reverse-dependencies.hbs
+++ b/app/templates/crate/reverse-dependencies.hbs
@@ -1,20 +1,20 @@
 <div class='all-versions-back'>
-  <LinkTo @route="crate" @model={{crate.id}}>&#11013; Back to {{ crate.name }}</LinkTo>
+  <LinkTo @route="crate" @model={{this.crate.id}}>&#11013; Back to {{ this.crate.name }}</LinkTo>
 </div>
 
 <div id='results'>
   <div class='nav'>
     <span class='amt'>
       Displaying
-      <span class='cur'>{{ currentPageStart }}-{{ currentPageEnd }}</span>
-      of <span class='total'>{{ totalItems }}</span> reverse dependencies
-      of <span class='num'>{{ crate.name }}</span>
+      <span class='cur'>{{ this.currentPageStart }}-{{ this.currentPageEnd }}</span>
+      of <span class='total'>{{ this.totalItems }}</span> reverse dependencies
+      of <span class='num'>{{ this.crate.name }}</span>
     </span>
   </div>
 </div>
 
 <div class='white-rows'>
-  {{#each model as |dependency|}}
+  {{#each this.model as |dependency|}}
     <div class='crate row'>
       <div>
         <LinkTo @route="crate" @model={{dependency.version.crateName}}>{{dependency.version.crateName}}</LinkTo> requires {{dependency.req}}
@@ -28,15 +28,15 @@
 </div>
 
 <div class='pagination'>
-  <LinkTo @query={{hash page=prevPage}} class="prev">
+  <LinkTo @query={{hash page=this.prevPage}} class="prev">
     {{svg-jar "left-pag"}}
   </LinkTo>
-  {{#each pages as |page|}}
+  {{#each this.pages as |page|}}
     <LinkTo @query={{hash page=page}}>
       {{ page }}
     </LinkTo>
   {{/each}}
-  <LinkTo @query={{hash page=nextPage}} class="next">
+  <LinkTo @query={{hash page=this.nextPage}} class="next">
     {{svg-jar "right-pag"}}
   </LinkTo>
 </div>
