--- a/app/templates/head.hbs
+++ b/app/templates/head.hbs
@@ -1,2 +1,2 @@
-<title>{{ model.title }}</title>
-<HeadTags @headTags={{model.headTags}} />
+<title>{{ this.model.title }}</title>
+<HeadTags @headTags={{this.model.headTags}} />
