--- a/app/templates/category/index.hbs
+++ b/app/templates/category/index.hbs
@@ -1,22 +1,22 @@
-{{ title category.category ' - Categories' }}
+{{ title this.category.category ' - Categories' }}
 
 <div id='crates-heading'>
   <LinkTo @route="categories" aria-label="Categories">{{svg-jar "crate"}}</LinkTo>
   <h1>
-    {{#each category.parent_categories as |parent|}}<LinkTo @route="category" @model={{parent.slug}}>{{parent.category}}</LinkTo>::{{/each}}
-    {{~ category.category }}
+    {{#each this.category.parent_categories as |parent|}}<LinkTo @route="category" @model={{parent.slug}}>{{parent.category}}</LinkTo>::{{/each}}
+    {{~ this.category.category }}
   </h1>
 </div>
 
 <div>
-  <p>{{ category.description }}</p>
+  <p>{{ this.category.description }}</p>
 </div>
 
-{{#if category.subcategories }}
+{{#if this.category.subcategories }}
   <div id='subcategories'>
     <h2>Subcategories</h2>
     <div class='white-rows'>
-      {{#each category.subcategories as |subcategory| }}
+      {{#each this.category.subcategories as |subcategory| }}
         <div class='row'>
           <div class='desc'>
             <div class='info'>
@@ -42,8 +42,8 @@
   <div class='nav' data-test-category-nav>
     <span class='amt small'>
       Displaying
-      <span class='cur'>{{ currentPageStart }}-{{ currentPageEnd }}</span>
-      of <span class='total'>{{ totalItems }}</span> total results
+      <span class='cur'>{{ this.currentPageStart }}-{{ this.currentPageEnd }}</span>
+      of <span class='total'>{{ this.totalItems }}</span> total results
     </span>
   </div>
 
@@ -52,7 +52,7 @@
     <RlDropdownContainer class="dropdown-container">
       <RlDropdownToggle @tagName="a" class="dropdown" data-test-current-order>
         {{svg-jar "sort"}}
-        {{ currentSortBy }}
+        {{ this.currentSortBy }}
         <span class='arrow'></span>
       </RlDropdownToggle>
 
@@ -83,19 +83,19 @@
 </div>
 
 <div id='crates' class='white-rows'>
-  {{#each model as |crate|}}
+  {{#each this.model as |crate|}}
     <CrateRow @crate={{crate}} />
   {{/each}}
 </div>
 
 <div class='pagination'>
-  <LinkTo @query={{hash page=prevPage}} class="prev" @rel="prev" @title="previous page">
+  <LinkTo @query={{hash page=this.prevPage}} class="prev" @rel="prev" @title="previous page">
     {{svg-jar "left-pag"}}
   </LinkTo>
-  {{#each pages as |page|}}
+  {{#each this.pages as |page|}}
     <LinkTo @query={{hash page=page}}>{{ page }}</LinkTo>
   {{/each}}
-  <LinkTo @query={{hash page=nextPage}} class="next" @rel="next" @title="next page">
+  <LinkTo @query={{hash page=this.nextPage}} class="next" @rel="next" @title="next page">
     {{svg-jar "right-pag"}}
   </LinkTo>
 </div>
