--- a/app/templates/components/badge-appveyor.hbs
+++ b/app/templates/components/badge-appveyor.hbs
@@ -1,8 +1,8 @@
-<a href="https://ci.appveyor.com/project/{{ projectName }}">
+<a href="https://ci.appveyor.com/project/{{ this.projectName }}">
   <img
-      src="{{ imageUrl }}"
-      alt="{{ text }}"
+      src="{{ this.imageUrl }}"
+      alt="{{ this.text }}"
       width="106"
       height="20"
-      title="{{ text }}">
+      title="{{ this.text }}">
 </a>
