--- a/app/templates/components/badge-azure-devops.hbs
+++ b/app/templates/components/badge-azure-devops.hbs
@@ -1,3 +1,3 @@
-<a href="https://dev.azure.com/{{ project }}/_build/latest?definitionId={{ build }}">
-  <img src="https://dev.azure.com/{{ project }}/_apis/build/status/{{ pipeline }}" alt="{{ text }}" title="{{ text }}">
+<a href="https://dev.azure.com/{{ this.project }}/_build/latest?definitionId={{ this.build }}">
+  <img src="https://dev.azure.com/{{ this.project }}/_apis/build/status/{{ this.pipeline }}" alt="{{ this.text }}" title="{{ this.text }}">
 </a>
