--- a/app/templates/components/badge-maintenance.hbs
+++ b/app/templates/components/badge-maintenance.hbs
@@ -1,6 +1,6 @@
-{{#unless none}}
+{{#unless this.none}}
   <img
-      src="https://img.shields.io/badge/maintenance-{{escapedStatus}}-{{color}}.svg"
-      alt="{{text}}"
-      title="{{text}}">
+      src="https://img.shields.io/badge/maintenance-{{this.escapedStatus}}-{{this.color}}.svg"
+      alt="{{this.text}}"
+      title="{{this.text}}">
 {{/unless}}
