--- a/app/templates/components/badge-travis-ci.hbs
+++ b/app/templates/components/badge-travis-ci.hbs
@@ -1,6 +1,6 @@
-<a href="https://travis-ci.org/{{ repository }}">
+<a href="https://travis-ci.org/{{ this.repository }}">
   <img
-      src="https://travis-ci.org/{{ repository }}.svg?branch={{ branch }}"
-      alt="{{ text }}"
-      title="{{ text }}">
+      src="https://travis-ci.org/{{ this.repository }}.svg?branch={{ this.branch }}"
+      alt="{{ this.text }}"
+      title="{{ this.text }}">
 </a>
