--- a/app/templates/components/crate-badge.hbs
+++ b/app/templates/components/crate-badge.hbs
@@ -1,5 +1,5 @@
 <img
-    src="https://img.shields.io/badge/crates.io-v{{ version }}-{{ color }}.svg?longCache=true"
-    alt="{{ crate.max_version }}"
-    title="{{ crate.name }}’s current version badge"
+    src="https://img.shields.io/badge/crates.io-v{{ this.version }}-{{ this.color }}.svg?longCache=true"
+    alt="{{ this.crate.max_version }}"
+    title="{{ this.crate.name }}’s current version badge"
     data-test-version-badge>
