--- a/app/templates/components/crate-list.hbs
+++ b/app/templates/components/crate-list.hbs
@@ -1,5 +1,5 @@
 <ol>
-  {{#each crates as |crate index|}}
+  {{#each this.crates as |crate index|}}
     <li>
       <LinkTo @route="crate" @model={{crate.id}} class="name" data-test-crate-link={{index}}>
         <span>{{ crate.name }} ({{ crate.max_version }})</span>
