--- a/app/templates/components/crate-toml-copy.hbs
+++ b/app/templates/components/crate-toml-copy.hbs
@@ -1,8 +1,8 @@
-<CopyButton @clipboardText={{copyText}} @success={{action "copySuccess"}} @error={{action "copyError"}} @title="Copy Cargo.toml snippet to clipboard">
+<CopyButton @clipboardText={{this.copyText}} @success={{action "copySuccess"}} @error={{action "copyError"}} @title="Copy Cargo.toml snippet to clipboard">
   {{svg-jar "copy" alt="Copy Cargo.toml snippet to clipboard"}}
-  <div class="copy-notification {{if showSuccess "copy-success" "copy-failure"}}">
-    {{#if showNotification}}
-      {{#if showSuccess}}
+  <div class="copy-notification {{if this.showSuccess "copy-success" "copy-failure"}}">
+    {{#if this.showNotification}}
+      {{#if this.showSuccess}}
         Copied!
       {{else}}
         An error occured. Please use CTRL+C.
