--- a/app/templates/components/pending-owner-invite-row.hbs
+++ b/app/templates/components/pending-owner-invite-row.hbs
@@ -1,41 +1,41 @@
 <div class='row'>
-  {{#if isAccepted }}
+  {{#if this.isAccepted }}
     <p>
       Success! You've been added as an owner of crate
-      <LinkTo @route="crate" @model={{invite.crate_name}}>{{invite.crate_name}}</LinkTo>.
+      <LinkTo @route="crate" @model={{this.invite.crate_name}}>{{this.invite.crate_name}}</LinkTo>.
     </p>
-  {{else if isDeclined}}
+  {{else if this.isDeclined}}
     <p>
       Declined. You have not been added as an owner of crate
-      <LinkTo @route="crate" @model={{invite.crate_name}}>{{invite.crate_name}}</LinkTo>.
+      <LinkTo @route="crate" @model={{this.invite.crate_name}}>{{this.invite.crate_name}}</LinkTo>.
     </p>
   {{else}}
     <div class='info'>
       <div class='name'>
         <h3>
-          <LinkTo @route="crate" @model={{invite.crate_name}}>
-            {{invite.crate_name}}
+          <LinkTo @route="crate" @model={{this.invite.crate_name}}>
+            {{this.invite.crate_name}}
           </LinkTo>
         </h3>
       </div>
       <div class='invite'>
         <p>
           Invited by:
-          <LinkTo @route="user" @model={{invite.invited_by_username}}>
-            {{invite.invited_by_username}}
+          <LinkTo @route="user" @model={{this.invite.invited_by_username}}>
+            {{this.invite.invited_by_username}}
           </LinkTo>
         </p>
       </div>
       <div class='sent'>
-        <span class='small'>{{moment-from-now invite.created_at}}</span>
+        <span class='small'>{{moment-from-now this.invite.created_at}}</span>
       </div>
       <div class='actions'>
-        <button type="button" class='small yellow-button' {{action 'acceptInvitation' invite}}>Accept</button>
-        <button type="button" class='small yellow-button' {{action 'declineInvitation' invite}}>Decline</button>
+        <button type="button" class='small yellow-button' {{action 'acceptInvitation' this.invite}}>Accept</button>
+        <button type="button" class='small yellow-button' {{action 'declineInvitation' this.invite}}>Decline</button>
       </div>
-      {{#if isError}}
+      {{#if this.isError}}
         <div class='label'>
-          <p class='small-text'>{{inviteError}}</p>
+          <p class='small-text'>{{this.inviteError}}</p>
         </div>
       {{/if}}
     </div>
