--- a/app/templates/components/validated-input.hbs
+++ b/app/templates/components/validated-input.hbs
@@ -1,13 +1,13 @@
 <div class='form-group'>
-  <Input @type={{type}} @value={{value}} placeholder={{placeholder}} class="form-control" @name={{valuePath}} />
-  {{#if isValid}}
+  <Input @type={{this.type}} @value={{this.value}} placeholder={{this.placeholder}} class="form-control" @name={{this.valuePath}} />
+  {{#if this.isValid}}
     <span class='valid-input fa fa-check'></span>
   {{/if}}
 
   <div class='input-error'>
-    {{#if showErrorMessage}}
+    {{#if this.showErrorMessage}}
       <div class='error'>
-        {{v-get model valuePath 'message'}}
+        {{v-get this.model this.valuePath 'message'}}
       </div>
     {{/if}}
   </div>
