--- a/app/templates/dashboard.hbs
+++ b/app/templates/dashboard.hbs
@@ -6,7 +6,7 @@
   <div id="stats">
     <div class='downloads'>
       <img class="download" src="/assets/download.svg">
-      <span class='num'>{{format-num visibleStats.total_downloads}}</span>
+      <span class='num'>{{format-num this.visibleStats.total_downloads}}</span>
       <span class='desc small'>Total Downloads</span>
     </div>
   </div>
@@ -22,13 +22,13 @@
           My Crates
         </h2>
 
-        {{#if hasMoreCrates}}
+        {{#if this.hasMoreCrates}}
           <span class='small'>
             <LinkTo @route="me.crates">Show all</LinkTo>
           </span>
         {{/if}}
       </div>
-      <CrateDownloadsList @crates={{visibleCrates}} />
+      <CrateDownloadsList @crates={{this.visibleCrates}} />
     </div>
     <div id='my-following'>
       <div class='header'>
@@ -37,13 +37,13 @@
           Following
         </h2>
 
-        {{#if hasMoreFollowing}}
+        {{#if this.hasMoreFollowing}}
           <span class='small'>
             <LinkTo @route="me.following">Show all</LinkTo>
           </span>
         {{/if}}
       </div>
-      <CrateDownloadsList @crates={{visibleFollowing}} />
+      <CrateDownloadsList @crates={{this.visibleFollowing}} />
     </div>
   </div>
 
@@ -54,7 +54,7 @@
     </h2>
 
     <div class='white-rows'>
-      {{#each myFeed as |version|}}
+      {{#each this.myFeed as |version|}}
         <div class='row'>
           <div class='info'>
             <LinkTo @route="crate.version" @models={{array version.crateName version.num}}>
@@ -68,12 +68,12 @@
         </div>
       {{/each}}
 
-      {{#if loadingMore}}
+      {{#if this.loadingMore}}
         <span class='load-more'>
           <img src="/assets/ajax-loader.gif">
         </span>
       {{else}}
-        {{#if hasMore}}
+        {{#if this.hasMore}}
           <button type="button" class='load-more' {{ action 'loadMore' }}>
             Load More
           </button>
