--- a/app/templates/me/crates.hbs
+++ b/app/templates/me/crates.hbs
@@ -11,8 +11,8 @@
   <div class='nav'>
     <span class='amt small'>
       Displaying
-      <span class='cur'>{{ currentPageStart }}-{{ currentPageEnd }}</span>
-      of <span class='total'>{{ totalItems }}</span> total results
+      <span class='cur'>{{ this.currentPageStart }}-{{ this.currentPageEnd }}</span>
+      of <span class='total'>{{ this.totalItems }}</span> total results
     </span>
   </div>
 
@@ -21,7 +21,7 @@
     <RlDropdownContainer class="dropdown-container">
       <RlDropdownToggle @tagName="a" class="dropdown">
         {{svg-jar "sort"}}
-        {{ currentSortBy }}
+        {{ this.currentSortBy }}
         <span class='arrow'></span>
       </RlDropdownToggle>
 
@@ -52,19 +52,19 @@
 </div>
 
 <div id='crates' class='white-rows'>
-  {{#each model as |crate|}}
+  {{#each this.model as |crate|}}
     <CrateRow @crate={{crate}} />
   {{/each}}
 </div>
 
 <div class='pagination'>
-  <LinkTo @query={{hash page=prevPage}} class="prev" @rel="prev" @title="previous page">
+  <LinkTo @query={{hash page=this.prevPage}} class="prev" @rel="prev" @title="previous page">
     {{svg-jar "left-pag"}}
   </LinkTo>
-  {{#each pages as |page|}}
+  {{#each this.pages as |page|}}
     <LinkTo @query={{hash page=page}}>{{ page }}</LinkTo>
   {{/each}}
-  <LinkTo @query={{hash page=nextPage}} class="next" @rel="next" @title="next page">
+  <LinkTo @query={{hash page=this.nextPage}} class="next" @rel="next" @title="next page">
     {{svg-jar "right-pag"}}
   </LinkTo>
 </div>
