--- a/app/templates/team.hbs
+++ b/app/templates/team.hbs
@@ -1,16 +1,16 @@
 <div id='crates-heading' data-test-heading>
   <div class="wide">
     <div class='info'>
-      <UserAvatar @user={{model.team}} @size="medium" data-test-avatar />
+      <UserAvatar @user={{this.model.team}} @size="medium" data-test-avatar />
       <div class='team-info'>
         <h1 data-test-org-name>
-          {{ model.team.org_name }}
+          {{ this.model.team.org_name }}
         </h1>
         <h2 data-test-team-name>
-          {{ model.team.name }}
+          {{ this.model.team.name }}
         </h2>
       </div>
-      <UserLink @user={{model.team}} data-test-github-link>
+      <UserLink @user={{this.model.team}} data-test-github-link>
         <img alt="GitHub profile" title="GitHub profile" src="/assets/GitHub-Mark.svg">
       </UserLink>
     </div>
@@ -25,8 +25,8 @@
       <div class='nav'>
         <span class='amt small'>
           Displaying
-          <span class='cur'>{{ currentPageStart }}-{{ currentPageEnd }}</span>
-          of <span class='total'>{{ totalItems }}</span> total results
+          <span class='cur'>{{ this.currentPageStart }}-{{ this.currentPageEnd }}</span>
+          of <span class='total'>{{ this.totalItems }}</span> total results
         </span>
       </div>
 
@@ -35,7 +35,7 @@
         <RlDropdownContainer class="dropdown-container">
           <RlDropdownToggle @tagName="a" class="dropdown">
             {{svg-jar "sort"}}
-            {{ currentSortBy }}
+            {{ this.currentSortBy }}
             <span class='arrow'></span>
           </RlDropdownToggle>
 
@@ -66,19 +66,19 @@
     </div>
 
     <div id='crates' class='white-rows'>
-      {{#each model.crates as |crate|}}
+      {{#each this.model.crates as |crate|}}
         <CrateRow @crate={{crate}} />
       {{/each}}
     </div>
 
     <div class='pagination'>
-      <LinkTo @query={{hash page=prevPage}} class="prev" @rel="prev" @title="previous page">
+      <LinkTo @query={{hash page=this.prevPage}} class="prev" @rel="prev" @title="previous page">
         {{svg-jar "left-pag"}}
       </LinkTo>
-      {{#each pages as |page|}}
+      {{#each this.pages as |page|}}
         <LinkTo @query={{hash page=page}}>{{ page }}</LinkTo>
       {{/each}}
-      <LinkTo @query={{hash page=nextPage}} class="next" @rel="next" @title="next page">
+      <LinkTo @query={{hash page=this.nextPage}} class="next" @rel="next" @title="next page">
         {{svg-jar "right-pag"}}
       </LinkTo>
     </div>
