--- a/app/templates/user.hbs
+++ b/app/templates/user.hbs
@@ -1,9 +1,9 @@
 <div id='crates-heading' data-test-heading>
-  <UserAvatar @user={{model.user}} @size="medium" data-test-avatar />
+  <UserAvatar @user={{this.model.user}} @size="medium" data-test-avatar />
   <h1 data-test-username>
-    {{ model.user.login }}
+    {{ this.model.user.login }}
   </h1>
-  <UserLink @user={{model.user}} data-test-user-link>
+  <UserLink @user={{this.model.user}} data-test-user-link>
     <img alt="GitHub profile" title="GitHub profile" src="/assets/GitHub-Mark.svg">
   </UserLink>
 </div>
@@ -16,8 +16,8 @@
       <div class='nav'>
         <span class='amt small'>
           Displaying
-          <span class='cur'>{{ currentPageStart }}-{{ currentPageEnd }}</span>
-          of <span class='total'>{{ totalItems }}</span> total results
+          <span class='cur'>{{ this.currentPageStart }}-{{ this.currentPageEnd }}</span>
+          of <span class='total'>{{ this.totalItems }}</span> total results
         </span>
       </div>
 
@@ -26,7 +26,7 @@
         <RlDropdownContainer class="dropdown-container">
           <RlDropdownToggle @tagName="a" class="dropdown">
             {{svg-jar "sort"}}
-            {{ currentSortBy }}
+            {{ this.currentSortBy }}
             <span class='arrow'></span>
           </RlDropdownToggle>
 
@@ -57,19 +57,19 @@
     </div>
 
     <div id='crates' class='white-rows'>
-      {{#each model.crates as |crate|}}
+      {{#each this.model.crates as |crate|}}
         <CrateRow @crate={{crate}} />
       {{/each}}
     </div>
 
     <div class='pagination'>
-      <LinkTo @query={{hash page=prevPage}} class="prev" @rel="prev" @title="previous page">
+      <LinkTo @query={{hash page=this.prevPage}} class="prev" @rel="prev" @title="previous page">
         {{svg-jar "left-pag"}}
       </LinkTo>
-      {{#each pages as |page|}}
+      {{#each this.pages as |page|}}
         <LinkTo @query={{hash page=page}}>{{ page }}</LinkTo>
       {{/each}}
-      <LinkTo @query={{hash page=nextPage}} class="next" @rel="next" @title="next page">
+      <LinkTo @query={{hash page=this.nextPage}} class="next" @rel="next" @title="next page">
         {{svg-jar "right-pag"}}
       </LinkTo>
     </div>
