--- a/app/templates/components/crate-row.hbs
+++ b/app/templates/components/crate-row.hbs
@@ -1,4 +1,4 @@
-<div class="crate row" ...attributes>
+<div class="crate row" data-test-crate-row ...attributes>
   <div class='desc'>
     <div class='info'>
       <LinkTo @route="crate" @model={{this.crate.id}} data-test-crate-link>{{ this.crate.name }}</LinkTo>
