crate-row: Use `let` helper to assign `data-test-badge` directly as an attribute

--- a/app/templates/components/crate-row.hbs
+++ b/app/templates/components/crate-row.hbs
@@ -5,7 +5,9 @@
       <CrateTomlCopy @copyText={{this.crateTomlText}} />
       <CrateBadge @crate={{this.crate}} />
       {{#each this.crate.annotated_badges as |badge|}}
-        {{component badge.component_name badge=badge data-test-badge=badge.badge_type}}
+        {{#let (component badge.component_name) as |Badge|}}
+          <Badge @badge={{badge}} data-test-badge={{badge.badge_type}} />
+        {{/let}}
       {{/each}}
     </div>
     <div class='summary' data-test-description>
@@ -43,5 +45,5 @@
       {{/if}}
     </ul>
   </div>
-  
+
 </div>
