--- a/app/templates/components/badge-github-actions.hbs
+++ b/app/templates/components/badge-github-actions.hbs
@@ -1,6 +1,3 @@
 <a href="https://github.com/{{ repository }}/actions">
-  <img
-      src="https://github.com/{{ repository }}/workflows/{{ workflow }}/badge.svg"
-      alt="{{ text }}"
-      title="{{ text }}">
+  <img src="{{ imageUrl }}" alt="{{ text }}" title="{{ text }}">
 </a>
