Apply fixes from rebase

--- a/app/templates/components/badge-github-actions.hbs
+++ b/app/templates/components/badge-github-actions.hbs
@@ -1,3 +1,3 @@
-<a href="https://github.com/{{ repository }}/actions">
-  <img src="{{ imageUrl }}" alt="{{ text }}" title="{{ text }}">
+<a href="https://github.com/{{ this.repository }}/actions">
+  <img src="{{ this.imageUrl }}" alt="{{ this.text }}" title="{{ this.text }}">
 </a>
