--- a/app/templates/components/welcome-message.hbs
+++ b/app/templates/components/welcome-message.hbs
@@ -1,3 +1,3 @@
 <p id="welcome-message" class={{if this.showMessage "show info"}} ...attributes>
-  Welcome to crates.io! Visit <a href='me'>account settings</a> to {{text}}
+  Welcome to crates.io! Visit <a href='me'>account settings</a> to {{this.text}}
 </p>
