--- a/app/templates/components/flash-message.hbs
+++ b/app/templates/components/flash-message.hbs
@@ -1,3 +1,3 @@
-<p id="flash" class={{if this.message "shown"}} ...attributes>
+<p id="flash" class={{if this.message "shown"}} data-test-flash-message ...attributes>
   {{this.message}}
 </p>
