CrateReadme: Use `highlight-syntax` modifier

--- a/app/templates/components/crate-readme.hbs
+++ b/app/templates/components/crate-readme.hbs
@@ -1,1 +1,3 @@
-{{html-safe this.rendered}}
+<div {{highlight-syntax selector="pre > code"}} data-test-readme>
+  {{html-safe this.rendered}}
+</div>
